--- a/src/Resources/views/friendlycaptcha.html.twig
+++ b/src/Resources/views/friendlycaptcha.html.twig
@@ -1,6 +1,7 @@
 {%- block cors_friendly_catcha_type_row -%}
     <div class="frc-captcha"
-         data-sitekey="{{ form.vars.sitekey }}" 
+         data-sitekey="{{ form.vars.sitekey }}"
+         data-form-field-name="{{ form.vars.full_name }}"
             {% for type, value in form.vars.friendly_captcha %}
                 data-{{ type }}="{{ value }}"
             {% endfor %}
